# analyse_tertullien

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: prod.yml
data/: Corpus.txt  Stopwords_latin.txt  corpus_clean  corpus_clean_lemma  corpus_lemma.txt
data/Pyrrha/: a_corpus-1600.tsv  c_corpus-5048.tsv  e_corpus-10161.tsv  f_corpus-12638.tsv  l_corpus-24147.tsv  m_corpus-26000.tsv  o_corpus-31660.tsv
data/author_classification/: Cic_Pro_Milone.txt  De_Pallio.txt
data/models/: test.keras  test_lemma.h5
data/xml/: Idol.xml
deploy/: deployment.yaml  service.yaml
deployment/: deployment.yaml  ingress.yaml  service.yaml
notebooks/: Lemmatiseur.ipynb
plot/: interactive_3d_plot.html
scripts/: run_docker.sh  useful_command.txt
src/: app.py  main.py
src/author_classification/: Dataset_Mathilde.ipynb  Texte_lemmatisé.txt  dataset_factory.py
src/data/: De_Pallio.txt
src/data/Pyrrha/: b_corpus-3600.tsv  d_corpus-7783.tsv  g_corpus-15036.tsv  h_corpus-16536.tsv  i_corpus-18045.tsv  j_corpus-20104.tsv  k_corpus-22247.tsv  n_corpus-28569.tsv
src/data/Pyrrha_output/: corpus_clean.txt
src/data/author_classification/: Apuleius_Flo.txt  De_Pallio.csv  Tert_Apol.txt
src/data/models/: test.keras
src/data/xml/: Cult2.xml  Mart2.xml  Pall2.xml  Val_2.xml
src/embedding/: callback.py  embedding_factory.py
src/preprocess/: lemmatiseur.py
src/templates/: display.html  display_wordclouds.html  summary.html  welcome.html  xml.html
src/utils/: converter.py
