[project]
name = "analyse-tertullien"
version = "0.1.0"
description = "This repo aims to provide tools to analyse Tertullien's writings through NLP techniques."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "gensim>=4.3.3",
    "jinja2>=3.1.6",
    "keras>=3.10.0",
    "lxml>=5.4.0",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "plotly==5.18.0",
    "scikit-learn==1.3.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.1",
    "uvicorn>=0.34.3",
]
